Fixes 1968: Update RepositoryResponse with snapshot taskID (#371)
* Fixes 1968: Add last_snapshot_task_uuid to RepositoryConfig response

* Add tests

* Fix pagination bug, update sql

* Handler Fix
