# api/openapi.json
@@ -312,6 +312,10 @@
                     "last_snapshot": {
                         "$ref": "#/components/schemas/api.SnapshotResponse"
                     },
+                    "last_snapshot_task_uuid": {
+                        "description": "UUID of the last snapshot task",
+                        "type": "string"
+                    },
                     "last_snapshot_uuid": {
                         "description": "UUID of the last dao.Snapshot",
                         "type": "string"
